@@ -83,13 +83,13 @@ Used in detection of systems with static IP addresses.  Looks for broadcast DHCP
 fails to see one before timer is exceeded.  This value should be greater than 50% of your DHCP lease time.
 EOT
 
-#[arp.listendevice]
-#type=text
-#description=<<EOT
-#Used to specify an alternative interface to use for ARP/DHCP monitoring.  Useful when a local SPAN is present as monitoring
-#DHCP without a SPAN may result in static DHCP false positives (DHCPRENEWs are unicast).  This option will likely be deprecated
-#in favor of an "arp" interface type in future versions.
-#EOT
+[arp.listendevice]
+type=text
+description=<<EOT
+Used to specify an alternative interface to use for ARP/DHCP monitoring.  Useful when a local SPAN is present as monitoring
+DHCP without a SPAN may result in static DHCP false positives (DHCPRENEWs are unicast).  This option will likely be deprecated
+in favor of an "arp" interface type in future versions.
+EOT
 
 [arp.heartbeat]
 type=time
