@@ -31,6 +31,11 @@ must first send a valid ARP to establish that the system is on-line.  The heartb
 <b>interval</b> <i>(time)</i><br>
 Default: 60s<br>
 Interval at which poisoned ARPs ("traps") are sent to infected/unregistered systems.<p>
+<a name=listendevice></a>
+<b>listendevice</b> <i>(text)</i><br>
+Used to specify an alternative interface to use for ARP/DHCP monitoring.  Useful when a local SPAN is present as monitoring
+DHCP without a SPAN may result in static DHCP false positives (DHCPRENEWs are unicast).  This option will likely be deprecated
+in favor of an "arp" interface type in future versions.<p>
 <a name=strobe></a>
 <b>strobe</b> <i>(toggle)</i><br>
 Default: enabled<br>
