@@ -16,7 +16,8 @@
         support MAC addresses in several different formats
           (http://www.packetfence.org/mantis/view.php?id=385)
         added script to check for duplication of secure MACs
-
+        documented arp.listendevice
+          (http://www.packetfence.org/mantis/view.php?id=387)
 
 1.7.3
         not all port security traps are handled
